--- a/index.html
+++ b/index.html
@@ -12,37 +12,47 @@
 
     <!-- First, create a form tag where our inputs will be nested -->
 
-
       <!-- Add a label for 'fullname'-->
 
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
       <!-- Include the place holder text "Enter Name" and make this input required -->
+  <form action="">
+      <label for="fullname">Fullname</label>
+      <input type="text" id="fullname" name="fullname" placeholder="Enter Name(required)" required/><br><br>
 
 
       <!-- Add a label for 'email'-->
 
       <!-- Add a email input with the id and name attributes set to 'email' -->
       <!-- Include the place holder text "Enter Email" and make this input required -->
-
+      <label for="Email">Email</label>
+      <input type="email" id="email" placeholder="Enter Email (required)" required/><br><br>
+    
 
       <!-- Add a label for 'phone'-->
 
       <!-- Add a telephone input with the id and name attributes set to 'phone' -->
       <!-- Include the place holder text "Enter Telephone (optional)" -->
+      <label for="Phone">Phone</label>
+      <input type="tel" id="phone" placeholder="Enter Telephone (optional)"/><br><br>
 
 
       <!-- Add a label for 'message'-->
 
       <!-- Add a textarea tag with the id and name attributes set to 'message' -->
       <!-- Include the place holder text "Enter Message" -->
-
+      <h3>Comment</h3>
+      <textarea id="message" placeholder="Enter Message"></textarea>
+      <label for="Message">Message</label>
 
       <!-- Add a checkbox input with the id set to 'checkbox' -->
-
-
+      <input type="checkbox" value="i">
+      <label for="i">Checkbox, Agree to terms and conditions</label><br>
 
       <!-- Add an input with the type set to 'submit' -->
 
-    
+      <input type="submit" value="Submit"/><br><br>
+
+    </form>
   </body>
 </html>
